# iotacamctrl

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  iotacamctrl.cpp  requirements.txt  setup.py  watch.sh
cmake/: enum_cli_hdr.cmake  enum_cli_src.cmake  enum_crsdk_hdr.cmake
include/CRSDK/: CrDeviceProperty.h
scripts/: build.sh  install.sh  watch.sh  watchman-build.sh
src/: CameraDevice.cpp  CameraDevice.h  PropertyValueTable.h  RemoteCli.cpp  iotacamctrl.cpp
